# pyBayesPrism

./: .gitignore  MANIFEST.in  README.md  compare.py  deploy.sh  extract.py  gibbs.py  main.py  optim.py  prism.py  pyproject.toml  run.py  tutorial.md
src/pybayesprism/: compare.py  extract.py  gibbs.py  main.py  optim.py  prism.py  process_input.py
